--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,15 +24,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
-    compile 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:25.4.0'
+    implementation 'com.android.support:design:25.4.0'
+    implementation 'com.google.android.gms:play-services-maps:11.4.2'
+    implementation 'com.google.firebase:firebase-database:11.4.2'
     testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:cardview-v7:25.4.0'
 }
-
-
 
 apply plugin: 'com.google.gms.google-services'
