--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,14 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:25.4.0'
     implementation 'com.android.support:design:25.4.0'
-    implementation 'com.google.android.gms:play-services-maps:11.4.2'
-    implementation 'com.google.firebase:firebase-database:11.4.2'
+    implementation 'com.google.android.gms:play-services-maps:11.6.0'
+    implementation 'com.google.firebase:firebase-database:11.6.0'
+    implementation 'com.google.firebase:firebase-auth:11.6.0'
+    implementation 'com.google.android.gms:play-services-auth:11.6.0'
+    implementation 'com.facebook.android:facebook-login:4.28.0'
     testCompile 'junit:junit:4.12'
     implementation 'com.android.support:cardview-v7:25.4.0'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
