--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:4.28.0'
     testCompile 'junit:junit:4.12'
     implementation 'com.android.support:cardview-v7:25.4.0'
+    implementation "com.google.android.gms:play-services-places:11.6.0"
 }
 
 
