--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     implementation 'com.android.support:cardview-v7:25.4.0'
     implementation "com.google.android.gms:play-services-places:11.6.0"
+
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
 }
 
 
