--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.6.0'
     implementation 'com.google.firebase:firebase-database:11.6.0'
     implementation 'com.google.firebase:firebase-auth:11.6.0'
+    implementation 'com.google.firebase:firebase-storage:11.6.0'
     implementation 'com.google.android.gms:play-services-auth:11.6.0'
     implementation 'com.facebook.android:facebook-login:4.28.0'
     testCompile 'junit:junit:4.12'
