--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -33,36 +34,46 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyArWl1RdLYJ76yMjDjlSm3ceyGz4riMm6Q" />
 
-        <activity android:name=".Activity.AddBengkelActivity"
-            android:label="Register Bengkel"/>
-        <activity android:name=".Activity.DetailBengkelActivity" android:theme="@style/NoActionBar" />
-        <activity android:name=".Activity.SignInActivity"
-            android:label="Sign In"/>
-        <activity android:name=".Activity.ProfileActivity"
-            android:label="Profile"/>
+        <activity
+            android:name=".Activity.AddBengkelActivity"
+            android:label="Register Bengkel" />
+        <activity
+            android:name=".Activity.DetailBengkelActivity"
+            android:theme="@style/NoActionBar" />
+        <activity
+            android:name=".Activity.SignInActivity"
+            android:label="Sign In" />
+        <activity
+            android:name=".Activity.ProfileActivity"
+            android:label="Profile" />
 
-        <!--facebookActivity-->
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+        <!-- facebookActivity -->
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <!--facebookActivity-->
+        <!-- facebookActivity -->
 
+        <activity android:name=".Activity.TipsActivity"
+            android:label="Tips"/>
+        <activity android:name=".Activity.AboutActivity"
+            android:label="About Cari Bengkel"/>
     </application>
-
-
 
 </manifest>
